force-app/main/default/objects/Monthly_Load__mdt/Monthly_Load__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type is created for taking monthly loads and insert it into salesforce.</description>
    <label>Monthly Load</label>
    <pluralLabel>Monthly Loads</pluralLabel>
</CustomObject>