force-app/main/default/objects/Monthly_Load__mdt/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <description>This is having the api names for the fields for the object for which the data load is required.</description>
    <inlineHelpText>Make sure that API name is in same order as of Field Name for the object. Separate each api name with a comma.</inlineHelpText>
    <label>Field API Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>