force-app/main/default/objects/Monthly_Load__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>This field will contain the field name for the object for which the data load is required.</description>
    <label>Field Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>