force-app/main/default/objects/Monthly_Load__mdt/fields/LoadType__c.field-meta.xml
<CustomField>
    <fullName>LoadType__c</fullName>
    <description>The load type value is the object for which the load needs to be done</description>
    <inlineHelpText>The load type value is the object for which the load needs to be done</inlineHelpText>
    <label>Load Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>